// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`0 models to download (network failure), 0 models downloaded and no model in use 1`] = `
<RCTScrollView
  contentInsetAdjustmentBehavior="automatic"
  style={
    [
      {
        "flex": 1,
        "paddingHorizontal": 16,
        "paddingTop": 16,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "marginVertical": 12,
          "paddingTop": 16,
        }
      }
    >
      <Text
        variant="h4"
      >
        screens.models.availableToDownload
      </Text>
      <View
        accessibilityLabel="screens.models.chooseModelTitle"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={8}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <PlatformIcon
          androidIconName="info"
          color="#628395"
          iosIconName="info.circle"
          size={20}
        />
      </View>
    </View>
    <View
      style={
        [
          {
            "paddingVertical": 12,
          },
          {
            "alignItems": "flex-start",
          },
        ]
      }
    >
      <Text
        style={
          {
            "marginBottom": 16,
          }
        }
      >
        screens.models.errorCannotGetModelsAtTheMoment
      </Text>
      <Button
        icon={
          {
            "androidIconName": "refresh",
            "iosIconName": "arrow.clockwise",
          }
        }
        onPress={[Function]}
        title="common.retry"
      />
    </View>
    <View
      style={
        {
          "height": NaN,
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`0 models to download (network failure), 1 model downloaded and 1 in use 1`] = `
<RCTScrollView
  contentInsetAdjustmentBehavior="automatic"
  style={
    [
      {
        "flex": 1,
        "paddingHorizontal": 16,
        "paddingTop": 16,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View>
    <Text
      style={
        {
          "marginBottom": 16,
        }
      }
      variant="h4"
    >
      screens.models.inUse
    </Text>
    <ModelCard
      isSelected={true}
      model={
        {
          "author": "Author",
          "family": "Family",
          "huggingfaceUrl": "https://huggingface.co/test/model-10",
          "id": 10,
          "languages": [],
          "name": "Model 10",
          "parameterCountBillions": 1,
          "parts": [],
          "pipeline": "textGeneration",
          "sizeGB": 1,
          "supportedFileFormat": [],
          "tags": [],
          "thinking": false,
          "toolCalling": false,
        }
      }
    />
    <Text
      style={
        {
          "marginVertical": 12,
          "paddingTop": 16,
        }
      }
      variant="h4"
    >
      screens.models.readyToUse
    </Text>
    <ListItem
      androidIconName="deployed_code_update"
      iconBackgroundColor="#628395"
      iosIconName="arrow.down.circle.fill"
      onPress={[Function]}
      subtitle="screens.models.modelCount"
      title="screens.models.downloaded"
    />
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "marginVertical": 12,
          "paddingTop": 16,
        }
      }
    >
      <Text
        variant="h4"
      >
        screens.models.availableToDownload
      </Text>
      <View
        accessibilityLabel="screens.models.chooseModelTitle"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={8}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <PlatformIcon
          androidIconName="info"
          color="#628395"
          iosIconName="info.circle"
          size={20}
        />
      </View>
    </View>
    <View
      style={
        [
          {
            "paddingVertical": 12,
          },
          {
            "alignItems": "flex-start",
          },
        ]
      }
    >
      <Text
        style={
          {
            "marginBottom": 16,
          }
        }
      >
        screens.models.errorCannotGetModelsAtTheMoment
      </Text>
      <Button
        icon={
          {
            "androidIconName": "refresh",
            "iosIconName": "arrow.clockwise",
          }
        }
        onPress={[Function]}
        title="common.retry"
      />
    </View>
    <View
      style={
        {
          "height": NaN,
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`2 models to download, 2 models downloaded and 1 in use 1`] = `
<RCTScrollView
  contentInsetAdjustmentBehavior="automatic"
  style={
    [
      {
        "flex": 1,
        "paddingHorizontal": 16,
        "paddingTop": 16,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View>
    <Text
      style={
        {
          "marginBottom": 16,
        }
      }
      variant="h4"
    >
      screens.models.inUse
    </Text>
    <ModelCard
      isSelected={true}
      model={
        {
          "author": "Author",
          "family": "Family",
          "huggingfaceUrl": "https://huggingface.co/test/model-10",
          "id": 10,
          "languages": [],
          "name": "Model 10",
          "parameterCountBillions": 1,
          "parts": [],
          "pipeline": "textGeneration",
          "sizeGB": 1,
          "supportedFileFormat": [],
          "tags": [],
          "thinking": false,
          "toolCalling": false,
        }
      }
    />
    <Text
      style={
        {
          "marginVertical": 12,
          "paddingTop": 16,
        }
      }
      variant="h4"
    >
      screens.models.readyToUse
    </Text>
    <ListItem
      androidIconName="deployed_code_update"
      iconBackgroundColor="#628395"
      iosIconName="arrow.down.circle.fill"
      onPress={[Function]}
      subtitle="screens.models.modelCount"
      title="screens.models.downloaded"
    />
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "marginVertical": 12,
          "paddingTop": 16,
        }
      }
    >
      <Text
        variant="h4"
      >
        screens.models.availableToDownload
      </Text>
      <View
        accessibilityLabel="screens.models.chooseModelTitle"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={8}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <PlatformIcon
          androidIconName="info"
          color="#628395"
          iosIconName="info.circle"
          size={20}
        />
      </View>
    </View>
    <ModelCard
      model={
        {
          "author": "Author",
          "family": "Family",
          "huggingfaceUrl": "https://huggingface.co/test/model-20",
          "id": 20,
          "languages": [],
          "name": "Model 20",
          "parameterCountBillions": 1,
          "parts": [],
          "pipeline": "textGeneration",
          "sizeGB": 1,
          "supportedFileFormat": [],
          "tags": [],
          "thinking": false,
          "toolCalling": false,
        }
      }
      onPress={[Function]}
    />
    <ModelCard
      model={
        {
          "author": "Author",
          "family": "Family",
          "huggingfaceUrl": "https://huggingface.co/test/model-21",
          "id": 21,
          "languages": [],
          "name": "Model 21",
          "parameterCountBillions": 1,
          "parts": [],
          "pipeline": "textGeneration",
          "sizeGB": 1,
          "supportedFileFormat": [],
          "tags": [],
          "thinking": false,
          "toolCalling": false,
        }
      }
      onPress={[Function]}
    />
    <View
      style={
        {
          "height": NaN,
        }
      }
    />
  </View>
</RCTScrollView>
`;
